<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <include layout="@layout/view_toolbar" />

    </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category_text"
                android:textStyle="bold"
                android:layout_margin="@dimen/select_category_margin"
                android:textSize="@dimen/select_category_text_size"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/button_padding"
                    android:elevation="@dimen/button_elevation"
                    android:textSize="@dimen/button_text_size"
                    android:textAllCaps="false"
                    android:background="@drawable/background_men_button"
                    android:textColor="@color/matches_button_text_color"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/category_nations_man_button"
                    android:id="@+id/nationsMenButton"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/button_padding"
                    android:elevation="@dimen/button_elevation"
                    android:textSize="@dimen/button_text_size"
                    android:textAllCaps="false"
                    android:background="@drawable/background_women_button"
                    android:textColor="@color/matches_button_text_color"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/category_nations_woman_button"
                    android:id="@+id/nationsWomenButton"
                    android:layout_weight="1" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/button_padding"
                    android:elevation="@dimen/button_elevation"
                    android:textSize="@dimen/button_text_size"
                    android:background="@drawable/background_pro_button"
                    android:textColor="@color/matches_button_text_color"
                    android:layout_margin="@dimen/button_margin"
                    android:textAllCaps="false"
                    android:text="@string/category_clubs_pro_button"
                    android:id="@+id/clubsProButton"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/button_padding"
                    android:elevation="@dimen/button_elevation"
                    android:textSize="@dimen/button_text_size"
                    android:textAllCaps="false"
                    android:background="@drawable/background_amateur_button"
                    android:textColor="@color/matches_button_text_color"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/category_clubs_amateur_button"
                    android:id="@+id/clubsAmateurButton"
                    android:layout_weight="1" />

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:padding="@dimen/button_padding"
                android:elevation="@dimen/button_elevation"
                android:textSize="@dimen/button_text_size"
                android:textAllCaps="false"
                android:background="@drawable/background_all_button"
                android:textColor="@color/matches_button_text_color"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/category_all_button"
                android:id="@+id/allButton" />
        </LinearLayout>




</LinearLayout>