<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mvc.kinballwc.ui.activity.MatchActivity">

    <include layout="@layout/view_toolbar" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/match_activity_margin">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/logo_margin_top"
                        android:background="@color/team1"
                        android:gravity="center"
                        android:text="@string/team1_color"
                        android:textColor="@color/team1_font" />

                    <TextView
                        android:id="@+id/team1Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/logo_margin_top"
                        android:gravity="center" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/team_logo_height" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/logo_margin_top"
                        android:background="@color/team2"
                        android:gravity="center"
                        android:text="@string/team2_color"
                        android:textColor="@color/team2_font" />


                    <TextView
                        android:id="@+id/team2Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/logo_margin_top"
                        android:gravity="center" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/team_logo_height" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/logo_margin_top"
                        android:background="@color/team3"
                        android:gravity="center"
                        android:text="@string/team3_color"
                        android:textColor="@color/team3_font" />


                    <TextView
                        android:id="@+id/team3Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/logo_margin_top"
                        android:gravity="center" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/team_logo_height" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.viewpagerindicator.TitlePageIndicator
                    android:id="@+id/indicator"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/period_text"
                    app:footerColor="@color/period_footer"
                    app:footerLineHeight="2dp"
                    app:footerIndicatorHeight="5dp"
                    app:footerIndicatorStyle="underline"
                    app:selectedColor="@color/period_footer"
                    app:selectedBold="true" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:padding="@dimen/match_activity_margin"
                    android:layout_width="match_parent"
                    android:layout_height="120dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/period_points" />

                    <LinearLayout
                        android:layout_width="@dimen/points_width"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team1"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team1_font" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team2"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team2_font" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team3"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team3_font" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/match_points" />

                    <LinearLayout
                        android:layout_width="@dimen/points_width"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team1"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team1_font" />

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team2"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team2_font" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team3"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team3_font" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sportsmanship_points" />

                    <LinearLayout
                        android:layout_width="@dimen/points_width"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team1"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team1_font" />

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team2"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team2_font" />

                        <TextView
                            android:id="@+id/textView25"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team3"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team3_font" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_points"
                        android:textSize="@dimen/total_points_font_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="@dimen/points_width"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team1"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team1_font"
                            android:textSize="@dimen/total_points_font_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team2"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team2_font"
                            android:textSize="@dimen/total_points_font_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/team3"
                            android:gravity="center"
                            android:text="@string/default_score"
                            android:textColor="@color/team3_font"
                            android:textSize="@dimen/total_points_font_size"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

